# effective-packet-filter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
UMLs/StarUML/: AgentPacketProcessing.mdj
agent/: CMakeLists.txt  main.cpp
agent/infra/: CMakeLists.txt  File.cpp  File.h  FileInterface.h
agent/packet/: PacketInterface.h
agent/processing_chain/: CMakeLists.txt  ChainBuilderInterface.h  ChainDirector.h  ChainManager.cpp  ChainManager.h
common/: Defs.h  PacketMessage.h  Version.h
driver/: Assert.h  CharDevice.c  CharDevice.h  DeviceClassManager.c  DeviceClassManager.h  Logger.h  Makefile  Module.c  Module.h  Status.c  Status.h  char_device.c  char_device.h  status.c
driver/char_devices/: CharDevice.h  CharDeviceOps.h  CharDevicesManager.c  CharDevicesManager.h
driver/hooks/: HooksManager.c  HooksManager.h
driver/network/: NetworkUtils.c  NetworkUtils.h
driver/utils/: MacroUtils.h  RingBuffer.c  RingBuffer.h
tests/agent/: CMakeLists.txt
tests/agent/infra/: FileTests.cpp
tests/agent/test_utils/: CMakeLists.txt  FsUtils.cpp  FsUtils.h
