cmake_minimum_required(VERSION 3.0)
project(EffectivePacketFilter)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(./agent)

# Optionally, specify include directories
# include_directories(${INCLUDE_DIRECTORIES})

# Optionally, link additional libraries
# target_link_libraries(${PROJECT_NAME} ${LIBRARIES})